<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.welovecoding.web</groupId>
  <artifactId>wlc-webapp</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>war</packaging>

  <name>${project.artifactId}</name>
  
  <developers>
    <developer>
      <name>Benny Neugebauer</name>
      <url>http://www.bennyn.de</url>
      <roles>
        <role>Original Author</role>
      </roles>
    </developer>
    <developer>
      <name>Michael Koppen</name>
      <roles>
        <role>Original Author</role>
      </roles>
    </developer>
  </developers>

  <properties>
    <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
    
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    
    <jdbc.url>jdbc:mysql://localhost:3306/welovecoding</jdbc.url>
    <jdbc.username>welovecoding</jdbc.username>
    <jdbc.password>123456</jdbc.password>
    <sql.driver.version>5.1.30</sql.driver.version>
    
    <gf.remote.address>0.0.0.0</gf.remote.address>
    <gf.remote.port>4848</gf.remote.port>
    <gf.remote.username>admin</gf.remote.username>
    <gf.remote.password>password</gf.remote.password>
    <gf.remote.deployable.type>war</gf.remote.deployable.type>
  </properties>
  
  <repositories>
    <repository>
      <id>mandubian-mvn</id>
      <url>http://mandubian-mvn.googlecode.com/svn/trunk/mandubian-mvn/repository</url>
    </repository>
    <repository>
      <id>google-api-services</id>
      <url>http://mavenrepo.google-api-java-client.googlecode.com/hg</url>
    </repository>
    <repository>
      <id>maven.java.net</id>
      <name>Java.net Repository for Maven</name>
      <url>https://maven.java.net/content/groups/promoted/</url>
    </repository>
    <repository>
      <id>maven-own-repo</id>
      <layout>default</layout>
      <name>Own Repository</name>
      <url>https://bitbucket.org/api/1.0/repositories/Yserz/ownmavenrepo/raw/HEAD/</url>
      <releases>
        <enabled>true</enabled>
        <!--<updatePolicy>always</updatePolicy>-->
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <!--<updatePolicy>always</updatePolicy>-->
      </snapshots>
    </repository>
    <repository>
      <id>glassfish</id>
      <url>http://download.java.net/maven/glassfish</url>
    </repository>
  </repositories>
    
  <dependencies>
    <!-- JPA -->
    <dependency>
      <groupId>org.eclipse.persistence</groupId>
      <artifactId>eclipselink</artifactId>
      <version>2.5.1</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.eclipse.persistence</groupId>
      <artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>
      <version>2.5.1</version>
      <scope>provided</scope>
    </dependency>
    <!-- JUnit -->
    <dependency>
      <groupId>com.google.code.findbugs</groupId>
      <artifactId>jsr305</artifactId>
      <version>2.0.1</version>
    </dependency>
    <dependency>
      <groupId>de.yser</groupId>
      <artifactId>OwnSimpleCache</artifactId>
      <version>1.0-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.3.1</version>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>org.omnifaces</groupId>
      <artifactId>omnifaces</artifactId>
      <version>1.7</version>
      <type>jar</type>
    </dependency>
    <dependency>
      <!-- Java EE Web Profile -->
      <groupId>javax</groupId>
      <artifactId>javaee-web-api</artifactId>
      <version>7.0</version>
      <scope>provided</scope>
    </dependency>
    <!-- YouTube -->
    <!--    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>10.0</version>
    </dependency>-->
    <dependency>
      <groupId>com.google.gdata</groupId>
      <artifactId>gdata-youtube-2.0</artifactId>
      <version>1.41.5</version>
      <exclusions>
        <exclusion>
          <artifactId>jsr305</artifactId>
          <groupId>com.google.code.findbugs</groupId>
        </exclusion>
        <exclusion>
          <artifactId>google-collections</artifactId>
          <groupId>com.google.collections</groupId>
        </exclusion>
      </exclusions>
    </dependency>
    <!-- Jersey (REST) -->
    <dependency>
      <groupId>org.glassfish.jersey.containers</groupId>
      <artifactId>jersey-container-servlet</artifactId>
      <version>2.5.1</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>2.2.2</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.jaxrs</groupId>
      <artifactId>jackson-jaxrs-json-provider</artifactId>
      <version>2.2.2</version>
    </dependency>
    
    <!-- TESTING -->
    <dependency>
      <groupId>org.glassfish.main.extras</groupId>
      <artifactId>glassfish-embedded-all</artifactId>
      <version>4.0.1-b04</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>${sql.driver.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.jayway.restassured</groupId>
      <artifactId>rest-assured</artifactId>
      <version>2.3.0</version>
      <scope>test</scope>
      <exclusions>
        <!-- Exclude Groovy because of classpath issues -->
        <exclusion>
          <groupId>org.codehaus.groovy</groupId>
          <artifactId>groovy</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.codehaus.groovy</groupId>
      <artifactId>groovy-all</artifactId>
      <!-- Needs to be the same version that REST Assured depends on -->
      <version>2.2.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.jayway.restassured</groupId>
      <artifactId>json-path</artifactId>
      <version>2.3.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.jayway.restassured</groupId>
      <artifactId>json-schema-validator</artifactId>
      <version>2.3.0</version>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <artifactId>jsr305</artifactId>
          <groupId>com.google.code.findbugs</groupId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <pluginRepositories>
    <pluginRepository>
      <id>glassfish</id>
      <url>http://download.java.net/maven/glassfish</url>
    </pluginRepository>
  </pluginRepositories>


  <build>
    <finalName>${project.artifactId}</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>1.7</source>
          <target>1.7</target>
          <compilerArguments>
            <Xlint:unchecked/>
            <endorseddirs>${endorsed.dir}</endorseddirs>
            <!--http://stackoverflow.com/a/14298133/451634--> 
            <proc:none/>
          </compilerArguments>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>2.3</version>
        <configuration>
          <!--<outputFileNameMapping>@{groupId}@-@{artifactId}@-@{baseVersion}@@{dashClassifier?}@.@{extension}@</outputFileNameMapping>-->
          <outputFileNameMapping>@{artifactId}@.@{extension}@</outputFileNameMapping>
          <failOnMissingWebXml>false</failOnMissingWebXml>
          <warName>${project.artifactId}</warName>
          <webResources> 
            <webResource> 
              <directory>${basedir}/src/main/webapp/WEB-INF</directory> 
              <includes> 
                <include>glassfish-resources.xml</include> 
              </includes> 
              <targetPath>WEB-INF</targetPath> 
              <filtering>true</filtering> 
            </webResource> 
          </webResources> 
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>2.6</version>
        <executions>
          <execution>
            <phase>validate</phase>
            <goals>
              <goal>copy</goal>
            </goals>
            <configuration>
              <outputDirectory>${endorsed.dir}</outputDirectory>
              <silent>true</silent>
              <artifactItems>
                <artifactItem>
                  <groupId>javax</groupId>
                  <artifactId>javaee-endorsed-api</artifactId>
                  <version>7.0</version>
                  <type>jar</type>
                </artifactItem>
              </artifactItems>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <!-- LESS CSS -->
      <!-- https://github.com/marceloverdijk/lesscss-maven-plugin -->
      <plugin>
        <groupId>org.lesscss</groupId>
        <artifactId>lesscss-maven-plugin</artifactId>
        <version>1.3.3</version>
        <configuration>
          <sourceDirectory>${project.basedir}/src/main/webapp/WEB-INF/frontend/less</sourceDirectory>
          <outputDirectory>${project.build.directory}/${project.build.finalName}/resources/css/generated</outputDirectory>
          <compress>true</compress>
          <force>false</force>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>compile</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <!-- TESTPLUGINS -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.17</version>
        <configuration>
          <properties>
            <property>
              <name>listener</name>
              <value>util.TestRunListener</value>
            </property>
          </properties>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.17</version>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <properties>
            <property>
              <name>listener</name>
              <value>util.IntegrationTestRunListener</value>
            </property>
          </properties>
          <systemPropertyVariables>
            <jdbcURL>${jdbc.url}</jdbcURL>
            <jdbcUsername>${jdbc.username}</jdbcUsername>
            <jdbcPassword>${jdbc.password}</jdbcPassword>
          </systemPropertyVariables>
        </configuration>
      </plugin>
    </plugins>
  </build>
  
  <profiles>
    <profile>
      <id>production</id>
      <properties>
        <!-- Override properties here -->
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.cargo</groupId>
            <artifactId>cargo-maven2-plugin</artifactId>
            <version>1.4.7</version>
            <configuration>
              <container>
                <containerId>glassfish4x</containerId>
                <type>remote</type>
                <!--<timeout>300000</timeout>  2 minutes -->
              </container>
              <configuration>
                <type>runtime</type>
                <properties>
                  <cargo.hostname>${gf.remote.address}</cargo.hostname>
                  <cargo.remote.username>${gf.remote.username}</cargo.remote.username>
                  <cargo.remote.password>${gf.remote.password}</cargo.remote.password>
                  <cargo.remote.port>${gf.remote.port}</cargo.remote.port>
                  <cargo.glassfish.domain.name>/domain1</cargo.glassfish.domain.name>
                  <!--<cargo.jvmargs>-XX:MaxPermSize=256M -Xmx512m</cargo.jvmargs>-->
                  <!--<cargo.jvmargs>-XX:PermSize=512m -XX:MaxPermSize=1024 -XX:+UseConcMarkSweepGC -XX:+CMSPermGenSweepingEnabled -XX:+CMSClassUnloadingEnabled</cargo.jvmargs>-->
                </properties>
              </configuration>
              <deployables>
                <deployable>
                  <groupId>${project.groupId}</groupId>
                  <artifactId>${project.artifactId}</artifactId>
                  <type>${gf.remote.deployable.type}</type>
                </deployable>
              </deployables>
            </configuration>
            <dependencies>
              <dependency>
                <groupId>org.glassfish.main.deployment</groupId>
                <artifactId>deployment-client</artifactId>
                <version>4.0</version>
              </dependency>
            </dependencies>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
   
</project>
